--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -164,19 +164,19 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={The sound of teaching music: Expert pianists' performance modulations for novices},
+  pdftitle={Expert pianists make specific exaggerations for teaching},
   pdfauthor={Atsuko Tominaga1,*, Günther Knoblich1, \& Natalie Sebanz1},
   pdflang={en-EN},
   pdfkeywords={teaching, skill transmission, sensorimotor communication, artistic expression, music},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
-\title{The sound of teaching music: Expert pianists' performance modulations for novices}
+\title{Expert pianists make specific exaggerations for teaching}
 \author{Atsuko Tominaga\textsuperscript{1,*}, Günther Knoblich\textsuperscript{1}, \& Natalie Sebanz\textsuperscript{1}}
 \date{}
 
 
-\shorttitle{The sound of teaching music}
+\shorttitle{Expert pianists make specific exaggerations for teaching}
 
 \affiliation{\vspace{0.5cm}\textsuperscript{1} Department of Cognitive Science, Central European University, Quellenstraße 51, 1100 Vienna, Austria\\\textsuperscript{*} Corresponding author: \href{mailto:Tominaga_Atsuko@phd.ceu.edu}{\nolinkurl{Tominaga\_Atsuko@phd.ceu.edu}}}
 
@@ -418,7 +418,7 @@ The results from Experiment 2 replicate our earlier findings and provide further
 \hypertarget{general-discussion}{%
 \section{General Discussion}\label{general-discussion}}
 
-The aim of this study was to investigate how expert pianists modulate their performance to teach techniques necessary to implement musical expressions. Overall, the findings of the two experiments showed that pianists performed one and the same piece differently depending on whether they played with the intention to teach expressive techniques or with the intention to perform the piece for an audience. When playing with the intention to teach, pianists selectively highlighted relevant aspects of artistic expressions. Across two different pieces, participants exaggerated staccato when playing with the intention to teach expressions concerning articulation. The lack of a difference for legato when teaching articulation might stem from a ceiling effect because there might not be enough room for exaggeration without significantly dropping the tempo. When playing with the intention to teach expressions concerning dynamics, participants made larger dynamics changes between forte and piano (in both directions). This constitutes an effective way to highlight the technique as loudness is determined relatively. Taken together, our findings demonstrate that expert pianists systematically modulated their sound depending on the specific technique they were trying to convey.
+The aim of this study was to investigate how expert pianists modulate their performance to teach techniques necessary to implement musical expressions. Overall, the findings of the two experiments showed that pianists performed one and the same piece differently depending on whether they played with the intention to teach techniques or with the intention to perform the piece for an audience. When playing with the intention to teach, pianists selectively highlighted relevant aspects of artistic expressions. Across two different pieces, participants exaggerated staccato when playing with the intention to teach expressions concerning articulation. The lack of a difference for legato when teaching articulation might stem from a ceiling effect because there might not be enough room for exaggeration without significantly dropping the tempo. When playing with the intention to teach expressions concerning dynamics, participants made larger dynamics changes between forte and piano (in both directions). This constitutes an effective way to highlight the technique as loudness is determined relatively. Taken together, our findings demonstrate that expert pianists systematically modulated their sound depending on the specific technique they were trying to convey.
 
 Although participants tended to play slower in the teaching condition than in the performing condition in general, we found a significant difference only for articulation, not for dynamics. As mentioned in the discussion of Experiment 1, it could be that the metronome beats given prior to each performance discouraged participants from deviating from the prescribed tempo. Another possibility is that expression is best taught when leaving the tempo unchanged when it is irrelevant. This would imply that general didactic modulations like slowing down might be less useful in the context of teaching techniques where timing itself can be used to add an expression to a performance.
 
@@ -594,7 +594,7 @@ In the teaching condition of Experiment 2, we gave participants the exact same i
 \hypertarget{descriptive-statistics-depending-on-participants-teaching-experience}{%
 \section{2. Descriptive statistics depending on participants' teaching experience}\label{descriptive-statistics-depending-on-participants-teaching-experience}}
 
-We summarised descriptive statistics for those had an experience in teaching the piano and those who did not. Due to the lack of statistical power, we did not perform any statistical tests.
+We summarised descriptive statistics for those with and without teaching experience in piano. Due to the lack of statistical power, we did not perform any statistical tests.
 
 \hypertarget{experiment-1-2}{%
 \subsection{Experiment 1}\label{experiment-1-2}}
@@ -604,15 +604,15 @@ We summarised descriptive statistics for those had an experience in teaching the
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-art-teaching-1-1} \caption{\label{fig:art-teaching-1}Experiment 1: Comparison between those with and without piano teaching experience in terms of KOT (ms) when playing the piece with articulation. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-art-teaching-1}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-art-teaching-1-1} \caption{\label{fig:art-teaching-1}Experiment 1: Comparison between those with and without piano teaching experience in terms of KOT (ms) when playing the piece with articulation (left: legato, right: staccato). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-art-teaching-1}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-teaching-1-1} \caption{\label{fig:dyn-teaching-1}Experiment 1: Comparison between those with and without piano teaching experience in terms of KV (0-127) when playing the piece with dynamics. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-teaching-1}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-teaching-1-1} \caption{\label{fig:dyn-teaching-1}Experiment 1: Comparison between those with and without piano teaching experience in terms of KV (0-127) when playing the piece with dynamics (left: forte, right: piano). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-teaching-1}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-diff-teaching-1-1} \caption{\label{fig:dyn-diff-teaching-1}Experiment 1: Comparison between those with and without piano teaching experience in terms of KV Difference at transition points when playing the piece with dynamics. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-diff-teaching-1}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-diff-teaching-1-1} \caption{\label{fig:dyn-diff-teaching-1}Experiment 1: Comparison between those with and without piano teaching experience in terms of KV Difference at transition points when playing the piece with dynamics  (left: forte to piano, right: piano to forte). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-diff-teaching-1}
 \end{figure}
 
 \begin{table}[tbp]
@@ -624,7 +624,7 @@ We summarised descriptive statistics for those had an experience in teaching the
 
 \begin{tabular}{lllllll}
 \toprule
-Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Teaching} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
+Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{TeachingExp} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
 \midrule
 Performing & Articulation & Yes & 10 & 181.27 & 10.99 & 3.47\\
 Teaching & Articulation & Yes & 10 & 184.72 & 13.02 & 4.12\\
@@ -639,7 +639,7 @@ Teaching & Dynamics & No & 21 & 193.50 & 21.22 & 4.63\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). TeachingExp indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -656,22 +656,22 @@ Teaching & Dynamics & No & 21 & 193.50 & 21.22 & 4.63\\
 
 \begin{tabular}{llllllll}
 \toprule
-Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{Teaching} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
+Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{TeachingExp} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
 \midrule
 Performing & Articulation & Legato & Yes & 10 & 21.57 & 16.18 & 5.12\\
-Performing & Articulation & Staccato & Yes & 10 & -119.66 & 22.84 & 7.22\\
 Teaching & Articulation & Legato & Yes & 10 & 25.43 & 13.11 & 4.15\\
+Performing & Articulation & Staccato & Yes & 10 & -119.66 & 22.84 & 7.22\\
 Teaching & Articulation & Staccato & Yes & 10 & -127.39 & 15.95 & 5.04\\
 Performing & Articulation & Legato & No & 21 & 10.40 & 16.57 & 3.62\\
-Performing & Articulation & Staccato & No & 21 & -132.48 & 19.03 & 4.15\\
 Teaching & Articulation & Legato & No & 21 & 11.36 & 14.71 & 3.21\\
+Performing & Articulation & Staccato & No & 21 & -132.48 & 19.03 & 4.15\\
 Teaching & Articulation & Staccato & No & 21 & -136.84 & 21.52 & 4.70\\
 \bottomrule
 \addlinespace
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). TeachingExp indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -688,22 +688,22 @@ Teaching & Articulation & Staccato & No & 21 & -136.84 & 21.52 & 4.70\\
 
 \begin{tabular}{llllllll}
 \toprule
-Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{Teaching} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
+Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{TeachingExp} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
 \midrule
 Performing & Dynamics & Forte & Yes & 10 & 85.20 & 7.76 & 2.45\\
-Performing & Dynamics & Piano & Yes & 10 & 60.27 & 4.57 & 1.44\\
 Teaching & Dynamics & Forte & Yes & 10 & 86.96 & 8.76 & 2.77\\
+Performing & Dynamics & Piano & Yes & 10 & 60.27 & 4.57 & 1.44\\
 Teaching & Dynamics & Piano & Yes & 10 & 60.11 & 5.93 & 1.87\\
 Performing & Dynamics & Forte & No & 21 & 79.97 & 6.82 & 1.49\\
-Performing & Dynamics & Piano & No & 21 & 61.33 & 4.40 & 0.96\\
 Teaching & Dynamics & Forte & No & 21 & 80.80 & 7.49 & 1.63\\
+Performing & Dynamics & Piano & No & 21 & 61.33 & 4.40 & 0.96\\
 Teaching & Dynamics & Piano & No & 21 & 60.88 & 4.76 & 1.04\\
 \bottomrule
 \addlinespace
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). TeachingExp indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -720,22 +720,22 @@ Teaching & Dynamics & Piano & No & 21 & 60.88 & 4.76 & 1.04\\
 
 \begin{tabular}{llllllll}
 \toprule
-Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{Teaching} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
+Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{TeachingExp} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
 \midrule
 Performing & Dynamics & FtoP & Yes & 10 & -14.63 & 5.79 & 1.83\\
-Performing & Dynamics & PtoF & Yes & 10 & 24.32 & 9.96 & 3.15\\
 Teaching & Dynamics & FtoP & Yes & 10 & -18.81 & 7.26 & 2.30\\
+Performing & Dynamics & PtoF & Yes & 10 & 24.32 & 9.96 & 3.15\\
 Teaching & Dynamics & PtoF & Yes & 10 & 29.07 & 8.78 & 2.78\\
 Performing & Dynamics & FtoP & No & 21 & -10.30 & 5.69 & 1.24\\
-Performing & Dynamics & PtoF & No & 21 & 19.23 & 7.71 & 1.68\\
 Teaching & Dynamics & FtoP & No & 21 & -11.87 & 6.09 & 1.33\\
+Performing & Dynamics & PtoF & No & 21 & 19.23 & 7.71 & 1.68\\
 Teaching & Dynamics & PtoF & No & 21 & 21.98 & 9.56 & 2.09\\
 \bottomrule
 \addlinespace
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.1 B) or dynamics (Fig.1 C). TeachingExp indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -753,15 +753,15 @@ Teaching & Dynamics & PtoF & No & 21 & 21.98 & 9.56 & 2.09\\
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-art-teaching-2-1} \caption{\label{fig:art-teaching-2}Experiment 2:  Comparison between those with and without piano teaching experience in terms of KOR when playing the piece with articulation. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-art-teaching-2}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-art-teaching-2-1} \caption{\label{fig:art-teaching-2}Experiment 2:  Comparison between those with and without piano teaching experience in terms of KOR when playing the piece with articulation (left: legato, right: staccato). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-art-teaching-2}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-teaching-2-1} \caption{\label{fig:dyn-teaching-2}Experiment 2: Comparison between those with and without piano teaching experience in terms of KV (0-127) when playing the piece with dynamics. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-teaching-2}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-teaching-2-1} \caption{\label{fig:dyn-teaching-2}Experiment 2: Comparison between those with and without piano teaching experience in terms of KV (0-127) when playing the piece with dynamics  (left: forte, right: piano). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-teaching-2}
 \end{figure}
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-diff-teaching-2-1} \caption{\label{fig:dyn-diff-teaching-2}Experiment 2: Comparison between those with and without piano teaching experience in terms of KV Difference at transition points when playing the piece with dynamics. Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-diff-teaching-2}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-dyn-diff-teaching-2-1} \caption{\label{fig:dyn-diff-teaching-2}Experiment 2: Comparison between those with and without piano teaching experience in terms of KV Difference at transition points when playing the piece with dynamics (left: forte to piano, right: piano to forte). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box.}\label{fig:plot-dyn-diff-teaching-2}
 \end{figure}
 
 \begin{table}[tbp]
@@ -773,7 +773,7 @@ Teaching & Dynamics & PtoF & No & 21 & 21.98 & 9.56 & 2.09\\
 
 \begin{tabular}{lllllll}
 \toprule
-Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Teaching} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
+Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{TeachingExp} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
 \midrule
 Performing & Articulation & Yes & 11 & 0.954 & 0.046 & 0.014\\
 Teaching & Articulation & Yes & 11 & 0.964 & 0.049 & 0.015\\
@@ -788,7 +788,7 @@ Teaching & Dynamics & No & 9 & 0.955 & 0.052 & 0.017\\
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). TeachingExp indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -805,22 +805,22 @@ Teaching & Dynamics & No & 9 & 0.955 & 0.052 & 0.017\\
 
 \begin{tabular}{llllllll}
 \toprule
-Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{Teaching} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
+Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{TeachingExp} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
 \midrule
 Performing & Articulation & Legato & Yes & 11 & 0.115 & 0.074 & 0.022\\
-Performing & Articulation & Staccato & Yes & 11 & -0.755 & 0.034 & 0.010\\
 Teaching & Articulation & Legato & Yes & 11 & 0.122 & 0.064 & 0.019\\
+Performing & Articulation & Staccato & Yes & 11 & -0.755 & 0.034 & 0.010\\
 Teaching & Articulation & Staccato & Yes & 11 & -0.776 & 0.034 & 0.010\\
 Performing & Articulation & Legato & No & 9 & 0.120 & 0.071 & 0.024\\
-Performing & Articulation & Staccato & No & 9 & -0.728 & 0.050 & 0.017\\
 Teaching & Articulation & Legato & No & 9 & 0.120 & 0.081 & 0.027\\
+Performing & Articulation & Staccato & No & 9 & -0.728 & 0.050 & 0.017\\
 Teaching & Articulation & Staccato & No & 9 & -0.749 & 0.073 & 0.024\\
 \bottomrule
 \addlinespace
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). TeachingExp indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -837,22 +837,22 @@ Teaching & Articulation & Staccato & No & 9 & -0.749 & 0.073 & 0.024\\
 
 \begin{tabular}{llllllll}
 \toprule
-Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{Teaching} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
+Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{TeachingExp} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
 \midrule
 Performing & Dynamics & Forte & Yes & 11 & 81.06 & 6.52 & 1.97\\
-Performing & Dynamics & Piano & Yes & 11 & 62.49 & 5.55 & 1.67\\
 Teaching & Dynamics & Forte & Yes & 11 & 83.32 & 6.48 & 1.95\\
+Performing & Dynamics & Piano & Yes & 11 & 62.49 & 5.55 & 1.67\\
 Teaching & Dynamics & Piano & Yes & 11 & 59.50 & 3.59 & 1.08\\
 Performing & Dynamics & Forte & No & 9 & 82.02 & 10.15 & 3.38\\
-Performing & Dynamics & Piano & No & 9 & 62.36 & 4.11 & 1.37\\
 Teaching & Dynamics & Forte & No & 9 & 83.06 & 11.54 & 3.85\\
+Performing & Dynamics & Piano & No & 9 & 62.36 & 4.11 & 1.37\\
 Teaching & Dynamics & Piano & No & 9 & 61.81 & 3.76 & 1.25\\
 \bottomrule
 \addlinespace
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). TeachingExp indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -869,22 +869,22 @@ Teaching & Dynamics & Piano & No & 9 & 61.81 & 3.76 & 1.25\\
 
 \begin{tabular}{llllllll}
 \toprule
-Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{Teaching} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
+Condition & \multicolumn{1}{c}{Technique} & \multicolumn{1}{c}{Subcomponent} & \multicolumn{1}{c}{TeachingExp} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{Mean} & \multicolumn{1}{c}{SD} & \multicolumn{1}{c}{SEM}\\
 \midrule
 Performing & Dynamics & FtoP & Yes & 11 & -14.43 & 6.20 & 1.87\\
-Performing & Dynamics & PtoF & Yes & 11 & 14.96 & 6.78 & 2.04\\
 Teaching & Dynamics & FtoP & Yes & 11 & -19.27 & 4.33 & 1.30\\
+Performing & Dynamics & PtoF & Yes & 11 & 14.96 & 6.78 & 2.04\\
 Teaching & Dynamics & PtoF & Yes & 11 & 20.77 & 5.71 & 1.72\\
 Performing & Dynamics & FtoP & No & 9 & -13.64 & 9.46 & 3.15\\
-Performing & Dynamics & PtoF & No & 9 & 17.44 & 8.11 & 2.70\\
 Teaching & Dynamics & FtoP & No & 9 & -14.84 & 11.08 & 3.69\\
+Performing & Dynamics & PtoF & No & 9 & 17.44 & 8.11 & 2.70\\
 Teaching & Dynamics & PtoF & No & 9 & 20.66 & 12.09 & 4.03\\
 \bottomrule
 \addlinespace
 \end{tabular}
 
 \begin{tablenotes}[para]
-\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). Teaching indicates if participants had an experience in teaching the piano.}
+\normalsize{\textit{Note.} N, SD and SEM represent sample size, standard deviation and standard error of the mean, respectively. Technique indicates performance data when participants playing the piece with either articulation (Fig.5 B) or dynamics (Fig.5 C). TeachingExp indicates if participants had an experience in teaching the piano.}
 \end{tablenotes}
 
 \end{threeparttable}
@@ -990,7 +990,7 @@ A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~perfo
 \hypertarget{experiment-2-5}{%
 \subsection{Experiment 2}\label{experiment-2-5}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Transition Type (FtoP vs.~PtoF) showed that there was a significant main effect of Transition Type (\emph{F}(1,19) = 42, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.63). However, there was no significant interaction between Condition and Transition Type (\emph{F}(1,19) = 1.10, \emph{p} = 0.306, \(\eta_G^2\) = 0.008, \emph{Fig \ref{fig:vel-diff-2}}).
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Transition Type (FtoP vs.~PtoF) showed that there was a significant main effect of Transition Type (\emph{F}(1,19) = 42, \emph{p} \textless{} 0.001, \(\eta_G^2\) = 0.63). However, there was no significant interaction between Condition and Transition Type (\emph{F}(1,19) = 1.10, \emph{p} = 0.31, \(\eta_G^2\) = 0.008, \emph{Fig \ref{fig:vel-diff-2}}).
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-vel-diff-2-1} \caption{\label{fig:vel-diff-2}Experiment 1, 2: Normalised KV Difference at transition points when playing the piece with dynamics (left: Experiment 1, right: Experiment 2). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-vel-diff-2}
